<resources>
    <string name="app_name">SimpleMathJ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="math_fragment_label">Math</string>
    <string name="lang_fragment_label">Language</string>
    <string name="third_fragment_label">Simple Arithmetic</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="check">\u2713</string>
    <string name="cross">\u2573</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--First Fragment-->
    <string name="math">Math</string>
    <string name="language">Language</string>

    <!--Math Fragment-->
    <string name="aplusb">A + B = C</string>
    <string name="asubb">A - B = C</string>
    <string name="axb">A x B = C</string>
    <string name="adivb">A / B = C</string>
    <string name="multBoard">Multi Digit Multiplication</string>
    <string name="addBoard">Multi Digit Addition</string>

    <!--Language Fragment-->
    <string name="vocab">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="stop_words">Stop Words</string>
    <string name="gr1">Grade 1</string>
    <string name="gr2">Grade 2</string>

    <!--Second Fragment-->
    <string name="nextQ">Next Question</string>

</resources>