<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/aplusb"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/aplusb" />

        <Button
            android:id="@+id/axb"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/axb"
            android:layout_below="@id/aplusb"/>

        <Button
            android:id="@+id/adivb"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/adivb"
            android:layout_below="@id/axb"/>

        <Button
            android:id="@+id/addBoard"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/addBoard"
            android:layout_below="@id/adivb"/>

        <Button
            android:id="@+id/multBoard"
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/multBoard"
            android:layout_below="@id/addBoard" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>