<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TopicFragment">

    <fragment
        android:id="@+id/TopicFragment"
        android:name="com.example.simplemathj.TopicFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_topic">

        <action
            android:id="@+id/action_TopicFragment_to_MathFragment"
            app:destination="@id/MathFragment"
            app:enterAnim="@anim/fragment_fade_enter" />

        <action
            android:id="@+id/action_TopicFragment_to_LanguageFragment"
            app:destination="@id/LangTopicFrag"
            app:enterAnim="@anim/fragment_fade_enter"/>

        <action
            android:id="@+id/action_TopicFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.simplemathj.SettingsFragment"
        android:label="Settings Fragment"
        tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
        android:id="@+id/MathFragment"
        android:name="com.example.simplemathj.math.MathTopicsFragment"
        android:label="@string/math_fragment_label"
        tools:layout="@layout/fragment_math">

        <action
            android:id="@+id/action_TopicFragment_to_ThirdFragment"
            app:destination="@id/SimpleArithFragment"
            app:enterAnim="@anim/fragment_open_enter" />

        <action
            android:id="@+id/action_TopicFragment_to_AddBoardFragment"
            app:destination="@id/AddBoardFragment"
            app:enterAnim="@anim/fragment_open_enter" />

    </fragment>

    <fragment
        android:id="@+id/LangTopicFrag"
        android:name="com.example.simplemathj.language.LangTopicFrag"
        tools:layout="@layout/fragment_lang"
        android:label="@string/lang_fragment_label">

        <action
            android:id="@+id/action_LangTopicFragment_to_VocabListFragment"
            app:destination="@id/VocabListFragment"
            app:enterAnim="@anim/fragment_open_enter" />

    </fragment>

    <fragment
        android:id="@+id/VocabListFragment"
        android:name="com.example.simplemathj.language.VocabListFrag"
        tools:layout="@layout/fragment_vocab">

        <action
            android:id="@+id/action_VocabList_to_VocabDisplay"
            app:destination="@id/VacabDisplayFragment"
            app:enterAnim="@anim/fragment_open_enter" />

    </fragment>

    <fragment
        android:id="@+id/VacabDisplayFragment"
        android:name="com.example.simplemathj.language.VocabDisplayFrag"
        tools:layout="@layout/fragment_vocab_display">

    </fragment>

    <fragment
        android:id="@+id/SimpleArithFragment"
        android:name="com.example.simplemathj.math.simpleArith.SimpleArithFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_simple_arith">

    </fragment>

    <fragment
        android:id="@+id/AddBoardFragment"
        android:name="com.example.simplemathj.math.boardArith.AddSubBoardFragment"
        android:label="Board"
        tools:layout="@layout/fragment_addition_board">

    </fragment>
</navigation>